--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
-
 {
   "name": "schema-evolution-monitor",
   "version": "1.0.0",
   "description": "Monitor schema changes and their impact on downstream systems",
   "main": "backend/src/index.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "nodemon backend/src/index.js",
-    "client": "cd frontend && vite",
+    "start": "node backend/src/index.js",
+    "start:dev": "concurrently \"npm run server:dev\" \"npm run client:dev\"",
+    "server:dev": "nodemon backend/src/index.js",
+    "client:dev": "cd frontend && vite",
     "build": "cd frontend && vite build",
     "test": "jest",
-    "init-db": "node backend/src/db/init.js"
+    "init-db": "node backend/src/db/init.js",
+    "postinstall": "npm run build"
   },
-  "keywords": [
-    "schema",
-    "monitoring",
-    "deployment",
-    "streaming"
-  ],
+  "keywords": ["schema", "monitoring", "deployment", "streaming"],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -44,8 +40,5 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.0"
-  },
-  "directories": {
-    "test": "tests"
   }
 }
